新規登録の修正 #62